# plugins

./: .gitignore  LICENSE  README.md  plugin-compatibility.md
mage-scheduler-plugin/: .mcp.json  README.md  SKILL.md  mage_scheduler_actions.html  mage_scheduler_dashboard.html  pyproject.toml
mage-scheduler-plugin/.claude-plugin/: plugin.json
mage-scheduler-plugin/commands/: scheduler.md
mage-scheduler-plugin/mage_scheduler/: api.py  db.py  dispatch.py  models.py  nl_parser.py  scheduler.py  schemas.py  task_manager.py
mage-scheduler-plugin/mage_scheduler/jobs/: cleanup.py  dependency_check.py  recurring_check.py  run_command.py
mage-scheduler-plugin/mage_scheduler/scripts/: ask_assistant.py
mage-scheduler-plugin/mage_scheduler/templates/: action_edit.html  action_form.html  actions.html  base.html  recurring.html  recurring_form.html  settings.html  task_detail.html  (+1 more)
mage-scheduler-plugin/mcp_server/: __main__.py  backend.py  platform_compat.py  tools.py
mage-scheduler-plugin/tests/: conftest.py  test_api_action_endpoints.py  test_api_create_task_form.py  test_api_depends_on.py  test_api_recurring_endpoints.py  test_api_settings_endpoints.py  test_api_task_endpoints.py  test_ask_assistant_command.py  test_backend_restart.py  test_beat_task.py  test_cleanup.py  test_command_resolution.py  test_dependency_runtime.py  test_intent_api_core.py  test_intent_api_recurring.py  test_intent_replace_existing.py  test_intent_utilities.py  test_nl_parser.py  test_platform_compat.py  test_recurring_beat_task.py  test_run_command.py  test_validate_depends_on.py
(+2 files in other folders)
